aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__mov__tests__mov_reg_mem.snap
---
source: aya-parser/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovRegMem(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
