aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__mov__tests__mov_var_reg.snap
---
source: aya-parser/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
